# GCCDF

./: CMakeLists.txt  LICENSE  main.cpp
EncodingMethod/: EDelta.h  EncodingMethod.h  zdlib.h
EncodingMethod/dDelta/: dDelta.h  htable.h
FeatureMethod/: DetectMethod.h  Detector.h  FinesseFeature.h  FinesseSkip.h  NFeature.h  NFeatureSample.h  NFeatureSkip.h
MetadataManager/: BeladyOptimalMonitor.h  ChunkCache.h  GCCache.h  HarContainerManager.h  LCDistanceTable.h  MetadataManager.h  MetadataManagerPersist.h
Pipeline/: ChunkingPipeline.h  DeduplicationPipeline.h  GarbageCollection.h  HashingPipeline.h  ReadFilePipeline.h  RestorePipleline.h  WriteFilePipeline.h
RollHash/: rabin_chunking.h
Utility/: Chunk.h  ChunkFileManager.h  FileOperator.h  Lock.h  StorageTask.h  xxhash.c
gtest_tests/: lctree_test.cpp  lctree_test_gray.cpp  variable_bitset_test.cpp
